--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -3,10 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/addItem"
-        android:icon="@drawable/ic_baseline_add_24"
-        android:title="@string/addPJ"
+        android:id="@+id/filterPersonajes"
+        android:icon="@drawable/ic_baseline_search_24"
         android:iconTint="@color/white"
-        app:showAsAction="always"/>
+        android:title="@string/filterPersonaje"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/addPersonaje"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:iconTint="@color/white"
+        android:title="@string/addPJ"
+        app:showAsAction="ifRoom" />
 
 </menu>
