--- a/app/src/main/res/layout/card_arma.xml
+++ b/app/src/main/res/layout/card_arma.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
@@ -15,10 +14,10 @@
         android:layout_width="377dp"
         android:layout_height="27dp"
         android:layout_marginTop="8dp"
-        android:text="@string/tvName"
-        android:textAlignment="textStart"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:text="@string/tvName"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,59 +26,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvName2"
+        android:id="@+id/tvDescription"
         android:layout_width="377dp"
         android:layout_height="27dp"
-        android:text="@string/tvName"
-        android:textAlignment="textStart"
-        android:paddingTop="3dp"
         android:paddingStart="10dp"
+        android:paddingTop="3dp"
         android:paddingEnd="10dp"
+        android:text="@string/tvDescripcion"
+        android:textAlignment="textStart"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvName"
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="@+id/tvName"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
-    <TextView
-        android:id="@+id/tvName3"
-        android:layout_width="97dp"
-        android:layout_height="26dp"
-        android:text="@string/tvName"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/tvName2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvName2"
-        app:layout_constraintTop_toBottomOf="@+id/tvName2" />
-
-    <TextView
-        android:id="@+id/tvName4"
-        android:layout_width="97dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="40dp"
-        android:text="@string/tvName"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/tvName5"
-        app:layout_constraintHorizontal_bias="0.065"
-        app:layout_constraintStart_toEndOf="@+id/tvName3"
-        app:layout_constraintTop_toBottomOf="@+id/tvName2" />
-
-    <TextView
-        android:id="@+id/tvName5"
-        android:layout_width="97dp"
-        android:layout_height="26dp"
-        android:text="@string/tvName"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/tvName2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/tvName2"
-        app:layout_constraintTop_toBottomOf="@+id/tvName2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
