--- a/app/src/main/res/layout/card_personaje.xml
+++ b/app/src/main/res/layout/card_personaje.xml
@@ -43,10 +43,10 @@
         app:layout_constraintVertical_bias="0.448" />
 
     <TextView
-        android:id="@+id/tvClase2"
+        android:id="@+id/tvCreationDate"
         android:layout_width="205dp"
         android:layout_height="29dp"
-        android:text="@string/clase"
+        android:text="@string/date"
         android:textAlignment="textStart"
         android:textSize="16sp"
         android:textStyle="bold"
