--- a/app/src/main/res/layout/card_personaje.xml
+++ b/app/src/main/res/layout/card_personaje.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardPersonaje"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
@@ -12,48 +13,52 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="205dp"
-        android:layout_height="26dp"
+        android:layout_width="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/tvName"
         android:textAlignment="textStart"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="40sp"
+        android:textStyle="italic"
+        android:fontFamily="sans-serif-thin"
         app:layout_constraintBottom_toBottomOf="@+id/ivClass"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ivClass"
         app:layout_constraintTop_toTopOf="@+id/ivClass"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tvClase"
-        android:layout_width="205dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="3dp"
         android:text="@string/clase"
         android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ivClass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toEndOf="@+id/ivClass"
-        app:layout_constraintTop_toTopOf="@+id/ivClass"
-        app:layout_constraintVertical_bias="0.448" />
+        app:layout_constraintEnd_toEndOf="@+id/tvName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tvName"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
         android:id="@+id/tvCreationDate"
-        android:layout_width="205dp"
+        android:layout_width="wrap_content"
         android:layout_height="29dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/date"
         android:textAlignment="textStart"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ivClass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.255"
-        app:layout_constraintStart_toEndOf="@+id/ivClass"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tvClase"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tvClase"
         app:layout_constraintTop_toBottomOf="@+id/tvClase"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -61,7 +66,7 @@
         android:id="@+id/ivClass"
         android:layout_width="95dp"
         android:layout_height="87dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/ivImagenDesc"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
