--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/filterPersonajes"
+        android:id="@+id/filter"
         android:icon="@drawable/ic_baseline_search_24"
         android:iconTint="@color/white"
         android:title="@string/filterPersonaje"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/addPersonaje"
+        android:id="@+id/register"
         android:icon="@drawable/ic_baseline_add_24"
         android:iconTint="@color/white"
         android:title="@string/addPJ"
