--- a/app/src/main/res/layout/card_arma_fragment.xml
+++ b/app/src/main/res/layout/card_arma_fragment.xml
@@ -36,6 +36,7 @@
         android:paddingStart="10dp"
         android:paddingTop="3dp"
         android:paddingEnd="10dp"
+        android:paddingBottom="10dp"
         android:text="@string/descripcion"
         android:textAlignment="textStart"
         android:textSize="20sp"
