--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -65,7 +65,7 @@
         android:label="fragment_add_personaje"
         tools:layout="@layout/fragment_add_personaje1">
         <action
-            android:id="@+id/action_addPersonajeFragment_to_addPersonajeFragment2"
+            android:id="@+id/action_addPersonajeFragment1_to_addPersonajeFragment2"
             app:destination="@id/addPersonajeFragment2" />
     </fragment>
     <fragment
@@ -77,12 +77,12 @@
             android:id="@+id/action_RVPersonajeFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment" />
         <action
-            android:id="@+id/action_RVPersonajeFragment_to_addPersonajeFragment"
+            android:id="@+id/action_RVPersonajeFragment_to_addPersonajeFragment1"
             app:destination="@id/addPersonajeFragment1" />
     </fragment>
     <fragment
         android:id="@+id/addPersonajeFragment2"
-        android:name="ies.quevedo.chardat.AddPersonajeFragment2"
+        android:name="ies.quevedo.chardat.ui.personaje.AddPersonajeFragment2"
         android:label="fragment_add_personaje2"
         tools:layout="@layout/fragment_add_personaje2" >
         <action
@@ -91,7 +91,7 @@
     </fragment>
     <fragment
         android:id="@+id/addPersonajeFragment3"
-        android:name="ies.quevedo.chardat.AddPersonajeFragment3"
+        android:name="ies.quevedo.chardat.ui.personaje.AddPersonajeFragment3"
         android:label="fragment_add_personaje3"
         tools:layout="@layout/fragment_add_personaje3" >
         <action
