--- a/app/src/main/res/layout/fragment_add_arma.xml
+++ b/app/src/main/res/layout/fragment_add_arma.xml
@@ -4,105 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.personaje.AddPersonajeFragment3"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="-22dp">
+    tools:context=".ui.arma.ArmaFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-22dp">
+        android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfPuntosHP"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
+            android:id="@+id/textInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="216dp"
             android:layout_height="60dp"
-            android:hint="@string/hp"
+            android:hint="@string/nombreArma"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.276"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.418">
+            app:layout_constraintVertical_bias="0.04">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etPuntosHP"
+            <AutoCompleteTextView
+                android:id="@+id/etNombreArma"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="86dp"
-                tools:layout_editor_absoluteY="269dp" />
+                android:inputType="none"
+                tools:ignore="LabelFor"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="187dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfNivel"
+            android:id="@+id/tfCalidad"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:hint="@string/nivel"
+            android:hint="@string/calidadArma"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintHorizontal_bias="0.874"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.049">
+            app:layout_constraintVertical_bias="0.04">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etNivel"
+                android:id="@+id/etCalidad"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="21dp" />
+                tools:layout_editor_absoluteX="19dp"
+                tools:layout_editor_absoluteY="100dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfHabilidadDeAtaque"
+            android:id="@+id/tfDescripcion"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:hint="@string/habilidadDeAtaque"
+            android:layout_width="333dp"
+            android:layout_height="100dp"
+            android:hint="@string/descripcion"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.049">
+            app:layout_constraintVertical_bias="0.171">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etHabilidadDeAtaque"
+                android:id="@+id/etDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="155dp"
-                tools:layout_editor_absoluteY="21dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfEsquiva"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:hint="@string/esquiva"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.948"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.049">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etEsquiva"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="295dp"
-                tools:layout_editor_absoluteY="21dp" />
+                android:inputType="textMultiLine"
+                tools:layout_editor_absoluteX="37dp"
+                tools:layout_editor_absoluteY="226dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -114,41 +87,63 @@
             android:hint="@string/turno"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.948"
+            app:layout_constraintHorizontal_bias="0.128"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.171">
+            app:layout_constraintVertical_bias="0.339">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etTurno"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="295dp"
-                tools:layout_editor_absoluteY="103dp" />
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfArmadura"
+            android:id="@+id/tfHabilidadDeAtaque"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:hint="@string/llevarArmadura"
+            android:hint="@string/habilidadDeAtaque"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.171">
+            app:layout_constraintVertical_bias="0.339">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etArmadura"
+                android:id="@+id/etHabilidadDeAtaque"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="155dp"
-                tools:layout_editor_absoluteY="103dp" />
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tfDamage"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:hint="@string/damage"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.874"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.338">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etDamage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="number"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -157,113 +152,70 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
             android:layout_height="60dp"
+            android:layout_marginTop="20dp"
             android:hint="@string/parry"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintHorizontal_bias="0.128"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.171">
+            app:layout_constraintVertical_bias="0.442">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etParada"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="103dp" />
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfRF"
+            android:id="@+id/tfValor"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:hint="@string/rf"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.051"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.295">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etRF"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="186dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfRM"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:hint="@string/rm"
+            android:layout_marginTop="20dp"
+            android:hint="@string/value"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.295">
+            app:layout_constraintVertical_bias="0.442">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etRM"
+                android:id="@+id/etValor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="155dp"
-                tools:layout_editor_absoluteY="186dp" />
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfRP"
+            android:id="@+id/tfPeso"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:hint="@string/rp"
+            android:layout_marginTop="20dp"
+            android:hint="@string/peso"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.948"
+            app:layout_constraintHorizontal_bias="0.874"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.295">
+            app:layout_constraintVertical_bias="0.442">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etRP"
+                android:id="@+id/etPeso"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                tools:layout_editor_absoluteX="295dp"
-                tools:layout_editor_absoluteY="186dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfStamina"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:hint="@string/stamina"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.723"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.418">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etStamina"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="225dp"
-                tools:layout_editor_absoluteY="269dp" />
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="339dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -272,10 +224,9 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
             android:text="@string/cancelar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.274"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.698" />
@@ -285,13 +236,15 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="100dp"
             android:text="@string/crear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.779"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.916"
+            app:layout_constraintStart_toEndOf="@+id/btCancelar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.698" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
