--- a/app/src/main/res/layout/fragment_personajes_list.xml
+++ b/app/src/main/res/layout/fragment_personajes_list.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="25dp"
-            android:backgroundTint="#2296F3"
+            android:backgroundTint="#2FB9EF"
             android:contentDescription="@string/extended_fab_content_desc"
             app:icon="@drawable/ic_baseline_add_24"
             app:layout_constraintBottom_toBottomOf="parent"
